@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2013/05/31 11:37:25 rodent Exp $
+# $NetBSD: Makefile,v 1.25 2013/07/11 10:40:29 wiz Exp $
 
 DISTNAME=	# empty
 PKGNAME=	modular-xorg-apps-1.14
@@ -69,7 +69,6 @@ DEPENDS+=	xrefresh-[0-9]*:../../x11/xrefresh
 DEPENDS+=	xscope-[0-9]*:../../x11/xscope
 DEPENDS+=	xset-[0-9]*:../../x11/xset
 DEPENDS+=	xsetmode-[0-9]*:../../x11/xsetmode
-DEPENDS+=	xsetpointer-[0-9]*:../../x11/xsetpointer
 DEPENDS+=	xsetroot-[0-9]*:../../x11/xsetroot
 DEPENDS+=	xsm-[0-9]*:../../x11/xsm
 DEPENDS+=	xstdcmap-[0-9]*:../../x11/xstdcmap
