@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2007/04/10 13:47:16 joerg Exp $
-
-SHA1 (xsetpointer-1.0.1.tar.bz2) = a8b01c6f27625a6f6943f9be17b1e5511f69d710
-RMD160 (xsetpointer-1.0.1.tar.bz2) = 281a766d1b6a34575fd589901417c0cb80e110ee
-Size (xsetpointer-1.0.1.tar.bz2) = 83260 bytes
